--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -1,32 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="match_parent">
 
-    <EditText android:id="@+id/edit_message"
-        android:layout_weight="15"
-        android:layout_width="100dp"
+    <EditText
+        android:id="@+id/edit_message"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:hint ="@string/edit_message"/>
+        android:hint="@string/edit_message" />
+
     <Button
         android:layout_toRightOf="@id/edit_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_send"/>
+        android:text="@string/button_send" />
 
     <EditText
-        android:layout_below="@+id/edit_message"
-        android:layout_width="15dp"
+        android:layout_below="@id/edit_message"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:hint ="@string/edit_message"/>
+        android:hint="@string/edit_message" />
     <Button
+        android:layout_toRightOf="@id/edit_message"
+        android:layout_below="@id/edit_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_send"/>
+        android:text="@string/button_send" />
 
 
 
-</LinearLayout>
+
+
+</RelativeLayout>
